--- a/style.css
+++ b/style.css
@@ -7,3 +7,14 @@ body {
     margin: 0;
     background-color: #FFF;
 }
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+#canvas {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    touch-action: none;
+}
